feat(mer-review): add QBO Balance Sheet + COA/TrialBalance support; UC-01/03/04

--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,26 @@
 GOOGLE_SA_FILE=~/Desktop/service-account.json
 
 # Spreadsheet used for testing
-SPREADSHEET_ID=1jT9kE-SKBypVcm3zJP4HndsxwmnN8fRA #your_spreadsheet_id_here
+SPREADSHEET_ID=1Xm0BgDED8MuAvEikCoxDCbrhR8NPCuC1C6dQqg9IXjY #your_spreadsheet_id_here
+
+# ----------------------------
+# QuickBooks Online (QBO) - local testing (DO NOT COMMIT secrets)
+#
+# Intuit Developer Portal -> your app -> Keys & credentials
+# Redirect URI must match exactly.
+# Example redirect URI you can use locally:
+#   http://localhost:8040/qbo/callback
+# ----------------------------
+QBO_ENVIRONMENT=sandbox
+QBO_CLIENT_ID=
+QBO_CLIENT_SECRET=
+QBO_REDIRECT_URI=http://localhost:8040/qbo/callback
+
+# Optional: for scripts/qbo_api_smoke_test.py
+# QBO_REPORT_END_DATE=2025-11-30
 
 # Azure Key Vault (for when you have access)
 AZURE_VAULT_NAME=mer-agent-kv
 
 # Other test config
-TEST_SHEET_RANGE='Blackbird Fabrics Inc_MER_Nov_2025'!A1:E100
+TEST_SHEET_RANGE="'Blackbird Fabrics Inc_MER_Nov_2025'!A1:E100"
