--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -4,8 +4,8 @@ uvicorn
 azure-cosmos
 azure-monitor-opentelemetry
 azure-monitor-events-extension
-azure-identity
-python-dotenv
+azure-identity>=1.16.0,<2.0.0
+python-dotenv>=1.1.1
 python-multipart
 opentelemetry-api
 opentelemetry-sdk
@@ -15,9 +15,9 @@ opentelemetry-instrumentation-openai
 opentelemetry-exporter-otlp-proto-http
 
 semantic-kernel[azure]==1.32.2
-azure-ai-projects==1.0.0b11
-openai==1.84.0 
-azure-ai-inference==1.0.0b9 
+azure-ai-projects>=2.0.0b2
+openai>=1.99.0,<2.0.0
+azure-ai-inference>=1.0.0b9
 azure-search-documents 
 azure-ai-evaluation
 
