--- a/src/backend/.env.sample
+++ b/src/backend/.env.sample
@@ -3,19 +3,19 @@ COSMOSDB_DATABASE=macae
 COSMOSDB_CONTAINER=memory
 
 AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_MODEL_NAME=gpt-4.1-mini
-AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4.1-mini
+AZURE_OPENAI_MODEL_NAME=gpt-4.1
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4.1
 AZURE_OPENAI_API_VERSION=2024-12-01-preview
 
 APPLICATIONINSIGHTS_INSTRUMENTATION_KEY=
 AZURE_AI_SUBSCRIPTION_ID=
 AZURE_AI_RESOURCE_GROUP=
 AZURE_AI_PROJECT_NAME=
-AZURE_AI_MODEL_DEPLOYMENT_NAME=gpt-4.1-mini
+AZURE_AI_MODEL_DEPLOYMENT_NAME=gpt-4.1
 APPLICATIONINSIGHTS_CONNECTION_STRING=
 AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME=gpt-4o
 AZURE_OPENAI_RAI_DEPLOYMENT_NAME=
-AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME=gpt-4.1-mini
+AZURE_AI_AGENT_MODEL_DEPLOYMENT_NAME=gpt-4.1
 AZURE_COGNITIVE_SERVICES="https://cognitiveservices.azure.com/.default"
 AZURE_AI_AGENT_ENDPOINT=
 # AZURE_BING_CONNECTION_NAME=
